--- a/io.github.tobagin.secrets.yml
+++ b/io.github.tobagin.secrets.yml
@@ -14,7 +14,7 @@ finish-args:
   # Wayland access
   - --socket=wayland
   # Network access for Git synchronization and platform API integration
-  - --share=network
+  # - --share=network
   # Access to password store directory
   - --persist=.password-store
   # Access to GPG configuration directory
